[gd_scene load_steps=17 format=3 uid="uid://biooo6u8iqfrf"]

[ext_resource type="Script" uid="uid://dcm16qlvtuvew" path="res://player/player.gd" id="1_5fo77"]
[ext_resource type="PackedScene" uid="uid://c0d3ikyyc2i6k" path="res://common/effects/explosion.tscn" id="2_rgyib"]
[ext_resource type="Script" uid="uid://blxhak8rlu2mn" path="res://player/player_state_machine.gd" id="3_6a325"]
[ext_resource type="Script" uid="uid://dk3kr2v4qh2et" path="res://player/grounded.gd" id="4_5d8l8"]
[ext_resource type="Script" uid="uid://bpt2g4qp8nk7p" path="res://player/airborne.gd" id="5_31pr3"]
[ext_resource type="PackedScene" uid="uid://cdn784ajh1e7q" path="res://player/score/score_manager.tscn" id="6_31pr3"]
[ext_resource type="PackedScene" uid="uid://umh8le0drjhi" path="res://ui/player/player_ui.tscn" id="7_av4sv"]
[ext_resource type="Script" uid="uid://bstai1nhxfehp" path="res://player/dead.gd" id="7_hg6s5"]
[ext_resource type="PackedScene" uid="uid://lts73oaba3r0" path="res://player/model/player_car_model.tscn" id="8_rgyib"]
[ext_resource type="Script" uid="uid://dqllxu88l7v1r" path="res://player/sfx.gd" id="10_2ieo8"]
[ext_resource type="AudioStream" uid="uid://cewiiwwmxo52n" path="res://common/assets/sounds/landing_thud/metal-moving-81780.mp3" id="10_8t03j"]
[ext_resource type="AudioStream" uid="uid://bs3lla5wlp7xn" path="res://common/assets/sounds/car_crash/ui-designed-hit-modern-interface-impact-sweetener-01-230484.mp3" id="12_ebec5"]
[ext_resource type="AudioStream" uid="uid://dc6ag2mtpipjr" path="res://common/assets/sounds/whoosh/whoosh-motion-243505.mp3" id="13_yllr7"]
[ext_resource type="AudioStream" uid="uid://cxbgtqpip28yn" path="res://common/assets/sounds/engine/engine-6000.mp3" id="14_kb6p2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hlo50"]
size = Vector3(1.8772, 0.950989, 2.54322)

[sub_resource type="BoxShape3D" id="BoxShape3D_hg6s5"]
size = Vector3(1.7, 0.345, 0.34)

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 2
floor_constant_speed = true
script = ExtResource("1_5fo77")
explosion_scene = ExtResource("2_rgyib")

[node name="CollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00573686, 0.110409, 0.0485653)
shape = SubResource("BoxShape3D_hlo50")

[node name="PlayerCarModel" parent="." instance=ExtResource("8_rgyib")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.109548, -0.763366)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.91455, 0.404472, 0, -0.404472, 0.91455, 0.776548, 3.67204, 5.24544)
current = true

[node name="FloorCast" type="ShapeCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0736449, -1.37649)
shape = SubResource("BoxShape3D_hg6s5")
target_position = Vector3(0, -0.2, 0)

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("player")]
unique_name_in_owner = true
script = ExtResource("3_6a325")
player = NodePath("..")
initial_state = NodePath("Grounded")

[node name="Grounded" type="Node" parent="PlayerStateMachine"]
script = ExtResource("4_5d8l8")
steer_lerp = 4.0

[node name="Airborne" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_31pr3")
steer_lerp = 2.0

[node name="Dead" type="Node" parent="PlayerStateMachine"]
script = ExtResource("7_hg6s5")
can_exit = false

[node name="ScoreManager" parent="." instance=ExtResource("6_31pr3")]
unique_name_in_owner = true

[node name="PlayerUI" parent="." instance=ExtResource("7_av4sv")]
unique_name_in_owner = true

[node name="SFX" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("10_2ieo8")

[node name="Landing" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("10_8t03j")
volume_db = 4.0
bus = &"SFX"

[node name="Explode" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("12_ebec5")
volume_db = 3.0
bus = &"SFX"

[node name="Whoosh" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("13_yllr7")
bus = &"SFX"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_kb6p2")
volume_db = -6.0
autoplay = true
bus = &"SFX"
